# gshot

./: .gitignore  AGENTS.md  DEV_README.md  PKGBUILD  README.md  meson.build  session-ses_36b5.md
data/: foss.gshot.desktop.in  foss.gshot.gresource.xml  foss.gshot.metainfo.xml.in  foss.gshot.service.in  gshot.1  meson.build
src/: meson.build  screenshot-application.c  screenshot-area-selection.c  screenshot-backend-wayland.c  screenshot-backend-wayland.h  screenshot-config.c  screenshot-config.h  screenshot-dialog.c  screenshot-dialog.h  screenshot-filename-builder.c  screenshot-interactive-dialog.c  screenshot-utils.c  screenshot-utils.h
